# LibraryManagerSystem

./: CMakeLists.txt  README.md  main.cpp
core/: Manager.cpp  Manager.h
core/data/: Book.cpp  Book.h  BookInfo.cpp  BookInfo.h  StockedBook.cpp  StockedBook.h
data/: Book.cpp  Book.h  BookList.cpp  BookList.h  Manager.cpp  Manager.h
ui/: Menu.cpp  Menu.h
